--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
 	<body>
-Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain Coffea species. From the coffee fruit, the seeds are separated to produce 
+		<p>Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain Coffea species. From the coffee fruit, the seeds are separated to produce 
 a stable, raw product: unroasted green coffee. The seeds are then roasted, a process which transforms them into a consumable product: roasted coffee, which is ground 
-into a powder and typically steeped in hot water before being filtered out, producing a cup of coffee.
+into a powder and typically steeped in hot water before being filtered out, producing a cup of coffee.</p>
 
-Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its caffeine content. It is one of the most popular drinks in the world,
+		<p>Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its caffeine content. It is one of the most popular drinks in the world,
  and can be prepared and presented in a variety of ways (e.g., espresso, French press, caffè latte, or already-brewed canned coffee). It is usually served hot, although chilled 
 or iced coffee is common. Sugar, sugar substitutes, milk or cream are often used to lessen the bitter taste. It may be served with coffee cake or another sweet dessert like doug
-hnuts. A commercial establishment that sells prepared coffee beverages is known as a coffee shop (not to be confused with Dutch coffeeshops selling cannabis).
+hnuts. A commercial establishment that sells prepared coffee beverages is known as a coffee shop (not to be confused with Dutch coffeeshops selling cannabis).</p>
 
-Clinical research indicates that moderate coffee consumption is benign or mildly beneficial as a stimulant in healthy adults, with continuing research on whether long-term cons
-umption reduces the risk of some diseases, although some of the long-term studies are of questionable credibility.
+		<p>Clinical research indicates that moderate coffee consumption is benign or mildly beneficial as a stimulant in healthy adults, with continuing research on whether long-term cons
+umption reduces the risk of some diseases, although some of the long-term studies are of questionable credibility.</p>
 
-The earliest credible evidence of coffee-drinking as the modern beverage appears in modern-day Yemen from the middle of the 15th century in Sufi shrines, where coffee seeds we
+		<p>The earliest credible evidence of coffee-drinking as the modern beverage appears in modern-day Yemen from the middle of the 15th century in Sufi shrines, where coffee seeds we
 re first roasted and brewed in a manner similar to how it is now prepared for drinking. The Yemenis procured the coffee beans from the Ethiopian Highlands via coastal 
-Somali intermediaries, and began cultivation. By the 16th century, the drink had reached the rest of the Middle East and North Africa, later spreading to Europe.
+Somali intermediaries, and began cultivation. By the 16th century, the drink had reached the rest of the Middle East and North Africa, later spreading to Europe.</p>
 	</body>
 </html>
