--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ into a powder and typically steeped in hot water before being filtered out, prod
 				<p>Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its caffeine content. It is one of the most popular drinks in the world,
  and can be prepared and presented in a variety of ways (e.g., espresso, French press, caffè latte, or already-brewed canned coffee). It is usually served hot, although chilled 
 or iced coffee is common. Sugar, sugar substitutes, milk or cream are often used to lessen the bitter taste. It may be served with coffee cake or another sweet dessert like doug
-hnuts. A commercial establishment that sells prepared coffee beverages is known as a coffee shop (not to be confused with Dutch coffeeshops selling cannabis).</p>
+hnuts. A commercial establishment that sells prepared coffee beverages is known as a <em>coffee shop</em>.</p>
 
-				<p>Clinical research indicates that moderate coffee consumption is benign or mildly beneficial as a stimulant in healthy adults, with continuing research on whether long-term cons
+				<p>Clinical research indicates that moderate coffee consumption is benign or <em>mildly beneficial</em> as a stimulant in healthy adults, with continuing research on whether long-term cons
 umption reduces the risk of some diseases, although some of the long-term studies are of questionable credibility.</p>
 
 				<p>The earliest credible evidence of coffee-drinking as the modern beverage appears in modern-day Yemen from the middle of the 15th century in Sufi shrines, where coffee seeds we
@@ -23,26 +23,26 @@ Somali intermediaries, and began cultivation. By the 16th century, the drink had
 			<h2>Production</h2>
 				<h3>Processing</h3>
 					<p>Coffee berries and their seeds undergo several processes before they become the familiar roasted coffee. Berries have been traditi
-onally selectively picked by hand; a labor-intensive method, it involves the selection of only the berries at the peak of ripeness. More commonly, crops are strip picked, w
+onally selectively <em>picked by hand</em>; a labor-intensive method, it involves the selection of only the berries at the peak of ripeness. More commonly, crops are <em>strip picked</em>, w
 here all berries are harvested simultaneously regardless of ripeness by person or machine. After picking, green coffee is processed by one of two types of method—a dry proc
-ess type of method which is often simpler and less labor-intensive, and a wet process type of method, which incorporates batch fermentation, uses larger amounts of water in
+ess type of method which is often simpler and less labor-intensive, and a wet process type of method, which incorporates <em>batch fermentation</em>, uses larger amounts of water in
  the process, and often yields a milder coffee.</p>
 
-					<p>Then they are sorted by ripeness and color, and most often the flesh of the berry is removed, usually by machine, and the see
-ds are fermented to remove the slimy layer of mucilage still present on the seed. When the fermentation is finished, the seeds are washed with large quantities of fresh w
-ater to remove the fermentation residue, which generates massive amounts of coffee wastewater. Finally, the seeds are dried.</p>
+					<p>Then they are <em>sorted by ripeness and color</em>, and most often the flesh of the berry is removed, usually by machine, and the see
+ds are fermented to remove the slimy layer of mucilage still present on the seed. When the fermentation is finished, the seeds are <em>washed with large quantities of fresh w
+ater</em> to remove the fermentation residue, which generates massive amounts of coffee wastewater. Finally, the seeds are <em>dried</em>.</p>
 
-					<p>The best (but least used) method of drying coffee is using drying tables. In this method, the pulped and fermented coffee is 
+					<p>The best (but least used) method of drying coffee is using <strong>drying tables</strong>. In this method, the pulped and fermented coffee is 
 spread thinly on raised beds, which allows the air to pass on all sides of the coffee, and then the coffee is mixed by hand. In this method the drying that takes pl
 ace is more uniform, and fermentation is less likely. Most African coffee is dried in this manner and certain coffee farms around the world are starting to use this 
 traditional method.</p>
 
-					<p>Next, the coffee is sorted, and labeled as green coffee. Some companies use cylinders to pump in heated air to dry the coffee seeds, though this is generally in places w
+					<p>Next, the coffee is sorted, and labeled as <strong>green coffee</strong>. Some companies use cylinders to pump in heated air to dry the coffee seeds, though this is generally in places w
 here the humidity is very high.</p>
 
 				<h3>Roasting</h3>
-					<p>The next step in the process is the roasting of the green coffee. Coffee is usually sold in a roasted state, and with rare excepti
-ons, such as infusions from green coffee beans,[94] coffee is roasted before it is consumed. It can be sold roasted by the supplier, or it can be home roasted. The roast
+					<p>The next step in the process is the <strong>roasting</strong> of the green coffee. Coffee is usually sold in a roasted state, and with rare excepti
+ons, such as infusions from green coffee beans, coffee is roasted before it is consumed. It can be sold roasted by the supplier, or it can be home roasted. The roast
 ing process influences the taste of the beverage by changing the coffee bean both physically and chemically. The bean decreases in weight as moisture is lost and increases 
 in volume, causing it to become less dense. The density of the bean also influences the strength of the coffee and requirements for packaging.</p>
 
@@ -59,8 +59,8 @@ ic oils and acids weaken, changing the flavor; at 205 °C (401 °F), other oils 
 not to be confused with the decaffeination process.</p>
 
 				<h3>Grading Roasted Beans</h3>
-					<p>Depending on the color of the roasted beans as perceived by the human eye, they will be labeled as light, medium light, medi
-um, medium dark, dark, or very dark. A more accurate method of discerning the degree of roast involves measuring the reflected light from roasted seeds illuminated with 
+					<p>Depending on the color of the roasted beans as perceived by the human eye, they will be labeled as <em>light</em>, <em>medium light</em>, <em>medi
+um</em>, <em>medium dark</em>, <em>dark</em>, or <em>very dark</em>. A more accurate method of discerning the degree of roast involves measuring the reflected light from roasted seeds illuminated with 
 a light source in the near-infrared spectrum. This elaborate light meter uses a process known as spectroscopy to return a number that consistently indicates the roasted 
 coffee's relative degree of roast or flavor development.</p>
 
@@ -78,10 +78,10 @@ is often done by processing companies, and the extracted caffeine is usually sol
 
 				<h3>Storage</h3>
 
-					<p>Coffee is best stored in an airtight container made of ceramic, glass or non-reactive metal. Higher quality prepackaged coffee 
+					<p>Coffee is best stored in an airtight container made of <strong>ceramic, glass or non-reactive metal</strong>. Higher quality prepackaged coffee 
 usually has a one-way valve which prevents air from entering while allowing the coffee to release gases. Coffee freshness and flavor is preserved when it is stored 
-away from moisture, heat, and light. The tendency of coffee to absorb strong smells from food means that it should be kept away from such smells. Storage of coffee in 
-refrigerators is not recommended due to the presence of moisture which can cause deterioration. Exterior walls of buildings which face the sun may heat the interior of a 
+<em>away from</em> moisture, heat, and light. The tendency of coffee to absorb strong smells from food means that it should be kept away from such smells. Storage of coffee in 
+refrigerators is <strong>not recommended</strong> due to the presence of moisture which can cause deterioration. Exterior walls of buildings which face the sun may heat the interior of a 
 home, and this heat may damage coffee stored near such a wall. Heat from nearby ovens also harms stored coffee.</p>
 
 					<p>In 1931, a method of packing coffee in a sealed vacuum in cans was introduced. The roasted coffee was packed and then 99% of 
@@ -90,12 +90,12 @@ the air was removed, allowing the coffee to be stored indefinitely until the can
 				<h3>Brewing</h3>
 
 					<p>Coffee beans must be ground and brewed to create a beverage. The criteria for choosing a method include flavor and economy. Almost 
-all methods of preparing coffee require that the beans be ground and then mixed with hot water long enough to allow the flavor to emerge but not so long as to draw out bitter 
-compounds. The liquid can be consumed after the spent grounds are removed. Brewing considerations include the fineness of grind, the way in which the water is used to extract 
-the flavor, the ratio of coffee grounds to water (the brew ratio), additional flavorings such as sugar, milk, and spices, and the technique to be used to separate spent grounds. 
-Optimal coffee extraction occurs between 91 and 96 °C (196 and 205 °F).[105] Ideal holding temperatures range from 85 to 88 °C (185 to 190 °F) to as high as 93 °C (199 °F) and 
-the ideal serving temperature is 68 to 79 °C (154 to 174 °F).[106] The recommended brew ratio for non-espresso coffee is around 55 to 60 grams of grounds per litre of water, or 
-two level tablespoons for a 150-to-180-millilitre (5 to 6 US fl oz) cup.</p>
+all methods of preparing coffee require that the beans be <em>ground<em> and then mixed with hot water long enough to allow the flavor to emerge but not so long as to draw out bitter 
+compounds. The liquid can be consumed after the spent grounds are removed. Brewing considerations include the <em>fineness of grind</em>, the <em>way in which the water is used to extract 
+the flavor</em>, the <em>ratio of coffee grounds to water (the brew ratio)</em>, <em>additional flavorings</em> such as sugar, milk, and spices, and the <em>technique to be used to separate spent grounds</em>. 
+Optimal coffee extraction occurs between <strong>91 and 96 °C (196 and 205 °F)</strong>. Ideal holding temperatures range from <strong>85 to 88 °C (185 to 190 °F)</strong> to as high as <strong>93 °C (199 °F)</strong> and 
+the ideal serving temperature is <strong>68 to 79 °C (154 to 174 °F)</strong>. The recommended brew ratio for non-espresso coffee is around 55 to 60 grams of grounds per litre of water, or 
+<strong>two level tablespoons</strong> for a 150-to-180-millilitre (5 to 6 US fl oz) cup.</p>
 
 					<p>The roasted coffee beans may be ground at a roastery, in a grocery store, or in the home. Most coffee is roasted and ground at a roastery 
 and sold in packaged form, though roasted coffee beans can be ground at home immediately before consumption. It is also possible, though uncommon, to roast raw beans at home.</p>
@@ -163,8 +163,8 @@ grains even though actual coffee beans are not added to it.</p>
 					<p>A number of products are sold for the convenience of consumers who do not want to prepare their own coffee or who do not have 
 access to coffeemaking equipment. Instant coffee is dried into soluble powder or freeze-dried into granules that can be quickly dissolved in hot water. Originally invented in 1907,
  it rapidly gained in popularity in many countries in the post-war period, with Nescafé being the most popular product. Many consumers determined that the convenience in 
-preparing a cup of instant coffee more than made up for a perceived inferior taste,[129] although, since the late 1970s, instant coffee has been produced differently in such a 
-way that is similar to the taste of freshly brewed coffee.[citation needed] Paralleling (and complementing) the rapid rise of instant coffee was the coffee vending machine invented 
+preparing a cup of instant coffee more than made up for a perceived inferior taste, although, since the late 1970s, instant coffee has been produced differently in such a 
+way that is similar to the taste of freshly brewed coffee. Paralleling (and complementing) the rapid rise of instant coffee was the coffee vending machine invented 
 in 1947 and widely distributed since the 1950s.</p>
 
 					<p>Canned coffee has been popular in Asian countries for many years, particularly in China, Japan, South Korea, and Taiwan. 
@@ -181,7 +181,7 @@ people at the same time. It is described as having a flavor about as good as low
 
 					<p>A 2017 review of clinical trials found that drinking coffee is generally safe within usual levels of intake and is more likely to 
 improve health outcomes than to cause harm at doses of 3 or 4 cups of coffee daily. Exceptions include possible increased risk in women having bone fractures, and a 
-possible increased risk in pregnant women of fetal loss or decreased birth weight.[5] Results were complicated by poor study quality, and differences in age, gender, 
+possible increased risk in pregnant women of fetal loss or decreased birth weight. Results were complicated by poor study quality, and differences in age, gender, 
 health status, and serving size.</p>
 
 				<h3>Digestion</h3>
@@ -217,7 +217,7 @@ slightly increased risk of developing hypertension.</p>
 				<h3>Mental health</h3>
 					<p>The UK NHS advises that avoiding coffee may reduce anxiety. Caffeine, the major active ingredient in coffee, is associated 
 with anxiety. At high doses, typically greater than 300 mg, caffeine can both cause and worsen anxiety. For some people, discontinuing caffeine use can significantly 
-reduce anxiety. Caffeine-induced anxiety disorder is a subclass of substance- or medication-induced anxiety disorder.[169] Populations that may be most impacted 
+reduce anxiety. Caffeine-induced anxiety disorder is a subclass of substance- or medication-induced anxiety disorder. Populations that may be most impacted 
 by caffeine consumption are adolescents and those already suffering anxiety disorders. Preliminary research indicated the possibility of a beneficial relationship 
 between coffee intake and reduced depression. Long-term preliminary research, including assessment of symptoms for dementia and cognitive impairment, was inconclusive 
 for coffee having an effect in the elderly, mainly due to the poor quality of the studies.</p>
@@ -255,14 +255,7 @@ eobromine and theophylline—and a small amount of unchanged caffeine. Therefore
  The caffeine content of a cup of coffee varies depending mainly on the brewing method, and also on the coffee variety. According to the USDA National Nutrient Dat
 abase, a 240-millilitre (8 US fl oz) cup of "coffee brewed from grounds" contains 95 mg caffeine, whereas an espresso (25 ml) contains 53 mg.</p>
 
-					<p>According to an article in the Journal of the American Dietetic Association, coffee has the following caffeine content, 
-depending on how it is prepared:</p>
-
-Serving size	Caffeine content
-Brewed	200 mL (7 US fl oz)	80–135 mg
-Drip	200 mL (7 US fl oz)	115–175 mg
-Espresso	45–60 mL (1+1⁄2–2 US fl oz)	100 mg
-
+					
 					<p>Caffeine remains stable up to 200 °C (392 °F) and completely decomposes around 285 °C (545 °F). Given that roasting 
 temperatures don't exceed 200 °C (392 °F) for long and rarely if ever reach 285 °C (545 °F), the caffeine content of a coffee is not likely changed much by the roasting process.</p>
 
@@ -306,7 +299,7 @@ roasting batches with fresher, higher quality seeds than was the norm at the tim
 					<p>The American coffeehouse chain Starbucks, which began as a modest business roasting and selling coffee beans in 1971, was f
 ounded by three college students, Jerry Baldwin, Gordon Bowker, and Zev Siegl. The first store opened on 30 March 1971 at the Pike Place Market in Seattle, followed by
  a second and third over the next two years. Entrepreneur Howard Schultz joined the company in 1982 as Director of Retail Operations and Marketing, and pushed to 
-sell premade espresso coffee. The others were reluctant, but Schultz opened Il Giornale in Seattle in April 1986.[207] He bought the other owners out in March 1987 an
+sell premade espresso coffee. The others were reluctant, but Schultz opened Il Giornale in Seattle in April 1986. He bought the other owners out in March 1987 an
 d pushed on with plans to expand—from 1987 to the end of 1991, the chain (rebranded from Il Giornale to Starbucks) expanded to over 100 outlets. The company has 25,000 s
 tores in over 75 countries worldwide.</p>
 
@@ -339,20 +332,14 @@ ore generally, the phrase "coffee break" has also come to denote any break from 
 
 				<h3>Prohibition and Condemnation</h3>
 
-					<p>Coffee was initially used for spiritual reasons[which?]. At least 1,100 years ago, traders brought coffee across the Red Sea into 
+					<p>At least 1,100 years ago, traders brought coffee across the Red Sea into 
 Arabia (modern-day Yemen), where Muslim dervishes began cultivating the shrub in their gardens. At first, the Arabians made wine from the pulp of the fermented coffee berries. 
 This beverage was known as qishr (kisher in modern usage) and was used during religious ceremonies.</p>
 
 					<p>An ulema of jurists and scholars meeting in Mecca in 1511 prohibited coffee drinking as haraam, but whether coffee was intoxicating 
 was hotly debated over the next 30 years until the ban was finally overturned in the mid-16th century. Use in religious rites among the Sufi branch of Islam led to coffee's
- being put on trial[when?] in Mecca: it was accused of being a heretical substance, and its production and consumption were briefly repressed. An edict of Sultan Murad IV
+ being put on trial in Mecca: it was accused of being a heretical substance, and its production and consumption were briefly repressed. An edict of Sultan Murad IV
  (r. 1623–1640) later prohibited it in Ottoman Turkey.</p>
-
-					<p>Ethiopian Orthodox Christians prohibited coffee, regarded as a Muslim drink, until as late as 1889; as of 2019 it is considered[by whom?]
- a national drink of Ethiopia for people of all faiths.[citation needed] In 1670 some French doctors condemned coffee as poisonous. Coffee's early association in Europe
- with rebellious political activities led to King Charles II of England outlawing coffeehouses from January 1676 (although the subsequent uproar forced the monarch to back down
- two days before the ban was due to come into force). King Frederick the Great banned it in Prussia in 1777 for nationalistic and economic reasons; concerned about the pric
-e of imports, he sought to force the public back to consuming beer. Lacking coffee-producing colonies, Prussia had to import all its coffee at a great cost.</p>
 
 					<p>A contemporary example of religious prohibition of coffee can be found in The Church of Jesus Christ of Latter-day Saints.
  The organization regards the consumption of coffee as both physically and spiritually unhealthy. This attitude comes from the Mormon doctrine of health, published
