adding more text semantics

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	
 		<h1>Coffee</h1>
 			<h2>Introduction</h2>
-				<p>Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain Coffea species. From the coffee fruit, the seeds are separated to produce 
-a stable, raw product: unroasted green coffee. The seeds are then roasted, a process which transforms them into a consumable product: roasted coffee, which is ground 
+				<p>Coffee is a <strong>brewed drink</strong> prepared from roasted coffee beans, the seeds of berries from certain Coffea species. From the coffee fruit, the seeds are separated to produce 
+a stable, raw product: unroasted green coffee. The seeds are then <em>roasted</em>, a process which transforms them into a consumable product: <strong>roasted coffee<strong>, which is ground 
 into a powder and typically steeped in hot water before being filtered out, producing a cup of coffee.</p>
 
-				<p>Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its caffeine content. It is one of the most popular drinks in the world,
+				<p>Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its <em>caffeine content</em>. It is one of the most popular drinks in the world,
  and can be prepared and presented in a variety of ways (e.g., espresso, French press, caffè latte, or already-brewed canned coffee). It is usually served hot, although chilled 
 or iced coffee is common. Sugar, sugar substitutes, milk or cream are often used to lessen the bitter taste. It may be served with coffee cake or another sweet dessert like doug
-hnuts. A commercial establishment that sells prepared coffee beverages is known as a <em>coffee shop</em>.</p>
+hnuts. A commercial establishment that sells prepared coffee beverages is known as a <strong>coffee shop</strong>.</p>
 
 				<p>Clinical research indicates that moderate coffee consumption is benign or <em>mildly beneficial</em> as a stimulant in healthy adults, with continuing research on whether long-term cons
 umption reduces the risk of some diseases, although some of the long-term studies are of questionable credibility.</p>
@@ -46,17 +46,17 @@ ons, such as infusions from green coffee beans, coffee is roasted before it is c
 ing process influences the taste of the beverage by changing the coffee bean both physically and chemically. The bean decreases in weight as moisture is lost and increases 
 in volume, causing it to become less dense. The density of the bean also influences the strength of the coffee and requirements for packaging.</p>
 
-					<p>The actual roasting begins when the temperature inside the bean reaches approximately 200 °C (392 °F), though different varie
+					<p>The actual roasting begins when the temperature inside the bean reaches approximately <strong>200 °C (392 °F)</strong>, though different varie
 ties of seeds differ in moisture and density and therefore roast at different rates. During roasting, caramelization occurs as intense heat breaks down starches, cha
 nging them to simple sugars that begin to brown, which alters the color of the bean.</p>
 
 					<p>Sucrose is rapidly lost during the roasting process, and may disappear entirely in darker roasts. During roasting, aromat
 ic oils and acids weaken, changing the flavor; at 205 °C (401 °F), other oils start to develop. One of these oils, caffeol, is created at about 200 °C (392 °F),
- which is largely responsible for coffee's aroma and flavor.</p>
+ which is largely responsible for coffee's <em>aroma and flavor</em>.</p>
 
-					<p>Roasting is the last step of processing the beans in their intact state. During this last treatment, while still in the bean
+					<p><strong>Roasting</strong> is the last step of processing the beans in their intact state. During this last treatment, while still in the bean
  state, more caffeine breaks down above 235 °C (455 °F). Dark roasting is the utmost step in bean processing removing the most caffeine. Although, dark roasting is 
-not to be confused with the decaffeination process.</p>
+<em>not</em> to be confused with the decaffeination process.</p>
 
 				<h3>Grading Roasted Beans</h3>
 					<p>Depending on the color of the roasted beans as perceived by the human eye, they will be labeled as <em>light</em>, <em>medium light</em>, <em>medi
@@ -65,15 +65,15 @@ a light source in the near-infrared spectrum. This elaborate light meter uses a 
 coffee's relative degree of roast or flavor development.</p>
 
 			<h3>Roast characteristics</h3>
-					<p>The degree of roast has an effect upon coffee flavor and body. Darker roasts are generally bolder because they have less fiber content and a 
-more sugary flavor. Lighter roasts have a more complex and therefore perceived stronger flavor from aromatic oils and acids otherwise destroyed by longer roasting times. Roasting 
+					<p>The <strong>degree of roast</strong> has an effect upon coffee flavor and body. Darker roasts are generally <strong>bolder</strong> because they have less fiber content and a 
+more sugary flavor. Lighter roasts have a more complex and therefore <strong>perceived stronger flavor</strong> from aromatic oils and acids otherwise destroyed by longer roasting times. Roasting 
 does not alter the amount of caffeine in the bean, but does give less caffeine when the beans are measured by volume because the beans expand during roasting.</p>
 
-					<p>A small amount of chaff is produced during roasting from the skin left on the seed after processing.[100] Chaff is usually removed from the seeds by air movement, though a small amount is added to dark roast coffees to soak up oils on the seeds.[96]
+					<p>A small amount of chaff is produced during roasting from the skin left on the seed after processing. Chaff is usually removed from the seeds by air movement, though a small amount is added to dark roast coffees to soak up oils on the seeds.[96]
 
 				<h3>Decaffeination</h3>
-					<p>Decaffeination of coffee seeds is done while the seeds are still green. Many methods can remove caffeine from coffee, but all involve 
-either soaking the green seeds in hot water (often called the "Swiss water process") or steaming them, then using a solvent to dissolve caffeine-containing oils. Decaffeination 
+					<p>Decaffeination of coffee seeds is done while the seeds are <em>still green</em>. Many methods can remove caffeine from coffee, but all involve 
+either soaking the green seeds in hot water (often called the <em>"Swiss water process"</em>) or <em>steaming them</em>, then using a <strong>solvent</strong> to dissolve caffeine-containing oils. Decaffeination 
 is often done by processing companies, and the extracted caffeine is usually sold to the pharmaceutical industry.</p>
 
 				<h3>Storage</h3>
