fixed missing end tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<h1>Coffee</h1>
 			<h2>Introduction</h2>
 				<p>Coffee is a <strong>brewed drink</strong> prepared from roasted coffee beans, the seeds of berries from certain Coffea species. From the coffee fruit, the seeds are separated to produce 
-a stable, raw product: unroasted green coffee. The seeds are then <em>roasted</em>, a process which transforms them into a consumable product: <strong>roasted coffee<strong>, which is ground 
+a stable, raw product: unroasted green coffee. The seeds are then <em>roasted</em>, a process which transforms them into a consumable product: <strong>roasted coffee</strong>, which is ground 
 into a powder and typically steeped in hot water before being filtered out, producing a cup of coffee.</p>
 
 				<p>Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its <em>caffeine content</em>. It is one of the most popular drinks in the world,
