--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ the air was removed, allowing the coffee to be stored indefinitely until the can
 				<h3>Brewing</h3>
 
 					<p>Coffee beans must be ground and brewed to create a beverage. The criteria for choosing a method include flavor and economy. Almost 
-all methods of preparing coffee require that the beans be <em>ground<em> and then mixed with hot water long enough to allow the flavor to emerge but not so long as to draw out bitter 
+all methods of preparing coffee require that the beans be <em>ground</em> and then mixed with hot water long enough to allow the flavor to emerge but not so long as to draw out bitter 
 compounds. The liquid can be consumed after the spent grounds are removed. Brewing considerations include the <em>fineness of grind</em>, the <em>way in which the water is used to extract 
 the flavor</em>, the <em>ratio of coffee grounds to water (the brew ratio)</em>, <em>additional flavorings</em> such as sugar, milk, and spices, and the <em>technique to be used to separate spent grounds</em>. 
 Optimal coffee extraction occurs between <strong>91 and 96 °C (196 and 205 °F)</strong>. Ideal holding temperatures range from <strong>85 to 88 °C (185 to 190 °F)</strong> to as high as <strong>93 °C (199 °F)</strong> and 
