removed citation number

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Enlightenment; Voltaire, Rousseau, and Denis Diderot frequented it, and it is ar
 
 					<p>The modern steamless espresso machine was invented in Milan, Italy, in 1938 by Achille Gaggia, and from there spread in
  coffeehouses and restaurants across Italy and the rest of Europe in the early 1950s. An Italian named Pino Riservato opened the first espresso bar, the Moka Bar, i
-n Soho in 1952, and there were 400 such bars in London alone by 1956. Cappucino was particularly popular among English drinkers.[204] Similarly in the United States, t
+n Soho in 1952, and there were 400 such bars in London alone by 1956. Cappucino was particularly popular among English drinkers. Similarly in the United States, t
 he espresso craze spread. North Beach in San Francisco saw the opening of the Caffe Trieste in 1957, which served Beat Generation poets such as Allen Ginsberg and Bob 
 Kaufman alongside Italian immigrants. Similar such cafes existed in Greenwich Village and elsewhere.</p>
 
