--- a/Coffee Houses.html
+++ b/Coffee Houses.html
@@ -1,4 +1,13 @@
 <html>
+	<header>
+		<ul>
+			<li><a href="index.html">Introduction to Coffee</a></li>
+			<li><a href="Production.html">Production</a></li>
+			<li><a href="Health Effects.html">Health Effects</a></li>
+			<li><a href="Coffee Houses.html">Coffee Houses</a></li>
+			<li><a href="Society and Culture.html">Society and Culture</a></li>
+		</ul>
+	</header>
 	<body>
 	
 		
@@ -55,4 +64,7 @@ Association of Europe and the Specialty Coffee Association of America have been 
 			
 
 	</body>
+	<footer>
+		<p>The information on this site was borrowed from <a href="https://en.wikipedia.org/wiki/Coffee">This Wikipedia article</a>. We appreciate the Wiki contributors for their knowledge!</p>
+	</footer>
 </html>
