--- a/Health Effects.html
+++ b/Health Effects.html
@@ -1,4 +1,13 @@
 <html>
+	<header>
+		<ul>
+			<li><a href="index.html">Introduction to Coffee</a></li>
+			<li><a href="Production.html">Production</a></li>
+			<li><a href="Health Effects.html">Health Effects</a></li>
+			<li><a href="Coffee Houses.html">Coffee Houses</a></li>
+			<li><a href="Society and Culture.html">Society and Culture</a></li>
+		</ul>
+	</header>
 	<body>
 
 
@@ -89,4 +98,7 @@ temperatures don't exceed 200 °C (392 °F) for long and rarely if ever reach 28
 
 
 	</body>
+	<footer>
+		<p>The information on this site was borrowed from <a href="https://en.wikipedia.org/wiki/Coffee">This Wikipedia article</a>. We appreciate the Wiki contributors for their knowledge!</p>
+	</footer>
 </html>
