Added page breaks, images

--- a/Coffee Houses.html
+++ b/Coffee Houses.html
@@ -12,6 +12,7 @@
 	
 		
 			<h2>Coffee Houses</h2>
+				<img src="images/coffee house in vienna.jpg" alt="Coffee House in Vienna">
 
 					<p>Widely known as <em>coffeehouses</em> or <em>cafés</em>, establishments serving prepared coffee or other hot beverages have existed for over five 
 hundred years. The first coffeehouse in Constantinople was opened in 1475 by traders arriving from Damascus and Aleppo. Soon after, coffeehouses became part of the Ottoman 
