--- a/Health Effects.html
+++ b/Health Effects.html
@@ -12,6 +12,7 @@
 
 
 			<h1>Health Effects</h1>
+				<img src="images/caffeine molecule.png" alt="Skeletal formula of a caffiene molecule">
 
 					<p>A 2017 review of clinical trials found that drinking coffee is generally safe within usual levels of intake and is more likely to 
 improve health outcomes than to cause harm at doses of 3 or 4 cups of coffee daily. Exceptions include possible increased risk in women having <em>bone fractures</em>, and a 
