--- a/Production.html
+++ b/Production.html
@@ -13,6 +13,7 @@
 		
 
 			<h1>Production</h1>
+				<img src="images/roasted coffee beans.jpg" alt="Roasted Coffee Beans">
 				<h3>Processing</h3>
 					<p>Coffee berries and their seeds undergo several processes before they become the familiar roasted coffee. Berries have been traditi
 onally selectively <em>picked by hand</em>; a labor-intensive method, it involves the selection of only the berries at the peak of ripeness. More commonly, crops are <em>strip picked</em>, w
