--- a/Society and Culture.html
+++ b/Society and Culture.html
@@ -12,8 +12,10 @@
 	
 
 			<h1>Society and Culture</h1>
+				<img src="images/davoser cafe.jpg" alt="Davoser Cafe artwork">
 
 				<h3>Break</h3>
+					
 					<p>A <em>coffee break</em> in the United States and elsewhere is a short mid-morning rest period granted to employees in business and indu
 stry, corresponding with the Commonwealth terms <em>"elevenses"</em>, <em>"smoko"</em> (in Australia), <em>"morning tea"</em>, <em>"tea break"</em>, or even just <em>"tea"</em>. An afternoon coffee break, or afterno
 on tea, often occurs as well.</p>
