--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	</header>
 	<body>
 		<h1>Coffee</h1>
+			<img src="images/coffee1.jfif" alt="Cup of Coffee">
 			<h2>Introduction</h2>
 				<p>Coffee is a <strong>brewed drink</strong> prepared from roasted coffee beans, the seeds of berries from certain Coffea species. From the coffee fruit, the seeds are separated to produce 
 a stable, raw product: unroasted green coffee. The seeds are then <em>roasted</em>, a process which transforms them into a consumable product: <strong>roasted coffee</strong>, which is ground 
